# Ledgera

./: .gitignore  README.md  docker-compose.yml  railway.toml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  start.sh  test.db
backend/alembic/: env.py
backend/alembic/versions/: 2d4e4efa8ba2_documents_and_vouchers.py  5083ab50e6c7_communications_tables.py  8278e4698bc7_reports_and_conciliation.py  946039096edd_initial_core_schema.py  9d5eebb8fce7_add_conciliado_to_movimientos.py  df337ae56662_audit_log_table.py
backend/app/: check_schema.py  create_test_student.py  db_init.py  drop_audit_table.py  main.py  reset_admin.py  worker.py
backend/app/api/v1/: alumnos.py  auditoria.py  auth.py  (+8 more)
backend/app/core/: arq.py  config.py  database.py  dependencies.py  security.py  utils.py
backend/app/models/: __init__.py  alumno.py  audit.py  base.py  comprobante.py  comunicacion.py  conciliacion.py  cuota.py  documento.py  folio.py  movimiento.py  presupuesto.py  reporte.py  tenant.py  usuario.py  vale.py
backend/app/schemas/: alumno.py  audit.py  auth.py  comprobante.py  comunicacion.py  conciliacion.py  cuota.py  documento.py  movimiento.py  reporte.py  vale.py
backend/app/services/: __init__.py  audit_service.py  auth_service.py  conciliacion_service.py  cuota_service.py  email_service.py  folio_service.py  movimiento_service.py  pdf_service.py  reporte_service.py  storage_service.py
backend/tests/: conftest.py  test_alumnos.py  test_audit.py  test_email.py  test_folios.py  test_movimientos.py  test_pdf.py  test_permisos.py  test_reportes.py
(+45 files in other folders)
